Chapter 4: Traits and interfaces, created several traits and interfaces

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
     "psr-4": {
       "Controllers\\": "Controllers/",
       "Models\\": "Models/",
+      "Interfaces\\": "Models/Interfaces",
+      "Traits\\": "Models/Traits",
       "Database\\": "Database/"
     }
   },
